cluster/apps/doleo/doleo-backend/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doleo-backend-production
  namespace: doleo
  labels:
    app: doleo-backend-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doleo-backend-production
  template:
    metadata:
      labels:
        app: doleo-backend-production
    spec:
      containers:
        - name: doleo-backend-production
          image: spuxx/doleo-2-backend # {"$imagepolicy": "doleo:doleo-backend-production"}
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
