cluster/apps/doleo/doleo-backend/production/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: doleo-backend-production
  namespace: doleo
spec:
  selector:
    app: doleo-backend-production
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
