cluster/apps/doleo/doleo-backend/production/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doleo-backend-production
  namespace: doleo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "*.doleo-2.de"
      secretName: doleo-2.de
  rules:
    - host: api.doleo-2.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doleo-backend-production
                port:
                  number: 8080
